--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,7 @@ repositories {
 
 dependencies {
     // Use the latest Groovy version for building this library
+    implementation 'org.projectlombok:lombok:1.18.22'
     implementation 'org.codehaus.groovy:groovy-all:3.0.13'
 
     // This dependency is used by the application.
@@ -32,6 +33,9 @@ dependencies {
     implementation 'commons-io:commons-io:2.11.0'
     implementation 'org.seleniumhq.selenium:selenium-java:4.9.1'
     testImplementation 'org.testng:testng:7.8.0'
+    implementation 'org.apache.poi:poi:5.2.3'
+    implementation 'org.apache.poi:poi-ooxml:5.2.3'
+
 
 }
 
